--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,28 @@
 <html lang="en">
 
 <head>
+
+
+    <meta name="twitter:domain" content="ethwallpaper.co" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@getgitcoin" />
+    <meta name="twitter:title" content="Ethwallpaper: Make any wallpaper into an EthWallpaper" />
+    <meta name="twitter:description" content="Ethwallpaper is a fun little project that helps you ETH-logo-ize any image.." />
+    <meta name="twitter:image" content="https://d3vv6lp55qjaqc.cloudfront.net/items/2f2b2R0x1j3u450f0p3W/maxresdefault.png" />
+    <meta name="twitter:player:width" content="500" />
+    <meta name="twitter:player:height" content="197" />
+
+
+    <meta property=fb:app_id content="118275288856850">
+    <meta property=og:title content="Ethwallpaper: Make any wallpaper into an EthWallpaper">
+    <meta property=og:url content="https://ethwallpaper.co/" >
+    <meta property=og:description content="Ethwallpaper is a fun little project that helps you ETH-logo-ize any image.">
+    <meta property=og:image content="https://d3vv6lp55qjaqc.cloudfront.net/items/2f2b2R0x1j3u450f0p3W/maxresdefault.png">
+    <meta property=og:type content="website">
+    <meta property=og:site_name content="Ethwallpaper">
+
+
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
