disable Upload button while poloading

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="twitter:domain" content="ethwallpaper.co" />
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@getgitcoin" />
   <meta name="twitter:title" content="Ethwallpaper: Make any wallpaper into an EthWallpaper" />
   <meta name="twitter:description" content="Ethwallpaper is a fun little project that helps you ETH-logo-ize any image.." />
