dynamic meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,6 @@
   <meta name="twitter:site" content="@getgitcoin" />
   <meta name="twitter:title" content="Ethwallpaper: Make any wallpaper into an EthWallpaper" />
   <meta name="twitter:description" content="Ethwallpaper is a fun little project that helps you ETH-logo-ize any image.." />
-  <meta name="twitter:image" content="https://d3vv6lp55qjaqc.cloudfront.net/items/2f2b2R0x1j3u450f0p3W/maxresdefault.png" />
   <meta name="twitter:player:width" content="500" />
   <meta name="twitter:player:height" content="197" />
 
@@ -15,7 +14,6 @@
   <meta property=og:title content="Ethwallpaper: Make any wallpaper into an EthWallpaper">
   <meta property=og:url content="https://ethwallpaper.co/">
   <meta property=og:description content="Ethwallpaper is a fun little project that helps you ETH-logo-ize any image.">
-  <meta property=og:image content="https://d3vv6lp55qjaqc.cloudfront.net/items/2f2b2R0x1j3u450f0p3W/maxresdefault.png">
   <meta property=og:type content="website">
   <meta property=og:site_name content="Ethwallpaper">
 
@@ -37,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Ethereum Wallpapers</title>
+  <title>Ethwallpaper: Make any wallpaper into an EthWallpaper</title>
 </head>
 
 <body>
