move meta resources unde static folder

--- a/ethwallpaper/frontend/public/index.html
+++ b/ethwallpaper/frontend/public/index.html
@@ -27,20 +27,20 @@
   <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/static/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/static/favicon-16x16.png">
+  <link rel="mask-icon" href="%PUBLIC_URL%/static/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/mstile-150x150.png">
+  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/static/mstile-150x150.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.ico">
 
   <title>Ethwallpaper: Make any wallpaper into an EthWallpaper</title>
 </head>
